# ADAS-Automatisiertes-Fahrzeug

./: CMakeLists.txt  CurveFitting.cpp  CurveFitting.hpp  README.md  brake_assistant.cpp  lane_assistant.cpp
docs/: Anmerkung WICHTIG.txt
include/: CurveFitting.hpp  ObjectDetection.hpp  PidController.hpp  classNames.hpp
src/: ObjectDetection.cpp  PidController.cpp  brake_assistant.cpp
src/Mydnn/v3/: classNames.txt
test/: Aufgabe 3.cpp  MyDNN.cpp  Quelle.cpp
tools/: readClassName.cpp
